@@ -1,3 +1,8 @@
+2019-07-09  Arnaud Charlet  <charlet@adacore.com>
+
+	* gnat1drv.adb (Adjust_Global_Switches): Set
+	Dynamic_Elaboration_Checks to True in CodePeer mode.
+
 2019-07-09  Yannick Moy  <moy@adacore.com>
 
 	* sem_spark.adb (Get_Perm_Or_Tree): Issue an error when
